04_compile/grade.txt
Grading at Mon Feb  1 07:57:52 UTC 2021
Compiling your code
hello.c: In function ‘main’:
hello.c:6:10: error: ‘EXIT_SUCESS’ undeclared (first use in this function)
   return EXIT_SUCESS;
          ^
hello.c:6:10: note: each undeclared identifier is reported only once for each function it appears in
Your code did not compile

Overall Grade: FAILED
